examples/test/testpolicy12404.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12404
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key25: value36
      key3: value12
      key7: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value22
          key8: value2
      podSelector:
        matchLabels:
          key30: value16
